<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>org.jzy3d</groupId>
	<artifactId>panama-gl</artifactId>
	<version>2.0.1-SNAPSHOT</version>
	<name>Panama GL</name>

	<scm>
		<connection>scm:git:https://github.com/jzy3d/panama-gl</connection>
		<tag>panama-gl-2.0.1</tag>
	</scm>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>

		<!-- PUBLIC JZY3D MODULES -->
		<dependency>
			<groupId>org.jzy3d</groupId>
			<artifactId>jzy3d-core</artifactId>
			<version>${project.version}</version>
		</dependency>
		<!--<dependency> <groupId>org.jzy3d</groupId> <artifactId>jzy3d-native-jogl-awt</artifactId>
			<version>${project.version}</version> </dependency> -->
		<dependency>
			<groupId>org.jzy3d</groupId>
			<artifactId>jzy3d-tester-native</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jzy3d</groupId>
			<artifactId>jzy3d-tests-java9</artifactId>
			<version>${project.version}</version>
		</dependency>


		<!-- OTHER MODULES -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.16</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.4</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>24.0-jre</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.9</version>
			<type>jar</type>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<includes>
						<include>**/Test*.java</include>
						<include>**/*Test.java</include>
						<include>**/ITTest*.java</include>
					</includes>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<encoding>UTF-8</encoding>
					<compilerArgs>
						<arg>--add-modules=jdk.incubator.foreign</arg>
					</compilerArgs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<!-- Ensure stack trace get displayed -->
					<trimStackTrace>false</trimStackTrace>

					<!-- Parallel tests DISABLE PARALLEL TEST OTHERWISE CANVAS DO NOT UPDATE
						PROPERLY (?!)
						<parallel>classes</parallel> <useUnlimitedThreads>true</useUnlimitedThreads>
						<forkCount>1</forkCount>-->

					<!-- Configure Panama -->
					<argLine>
						-XstartOnFirstThread --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign -Djava.library.path=.:/System/Library/Frameworks/OpenGL.framework/Versions/Current/Libraries/
					</argLine>
				</configuration>
			</plugin>

			<!-- RELEASE PLUGIN TO HELP CREATE RELEASE BRANCHES -->
			<plugin>
				<artifactId>maven-release-plugin</artifactId>
				<version>3.8.1</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<manifestEntries>
										<Main-Class>org.jzy3d.demos.surface.SurfaceDemoPanamaGL</Main-Class>
										<!--<Main-Class>Teapot</Main-Class> <Main-Class>org.jzy3d.demos.teapot.TeapotDemoPanamaGL</Main-Class> -->
									</manifestEntries>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>disable-java8-doclint</id>
			<activation>
				<jdk>[1.8,)</jdk>
			</activation>
			<properties>
				<additionalparam>-Xdoclint:none</additionalparam>
			</properties>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>jzy3d-snapshots</id>
			<name>Jzy3d Snapshots</name>
			<url>https://maven.jzy3d.org/snapshots/</url>
		</repository>
		<repository>
			<id>jzy3d-releases</id>
			<name>Jzy3d Releases</name>
			<url>https://maven.jzy3d.org/releases/</url>
		</repository>
	</repositories>
</project>
